--- a/src/pages/admin/product/insert-product.scss
+++ b/src/pages/admin/product/insert-product.scss
@@ -216,6 +216,8 @@
 }
 
 .custom-table-product thead tr th {
+  
+    z-index: 100;
     vertical-align: middle;
     text-align: center;
     height: 50px;
