--- a/src/components/categories/CategoriesCarousel .scss
+++ b/src/components/categories/CategoriesCarousel .scss
@@ -1,21 +1,28 @@
 .categories-carousel {
   max-width: 100%;
-  padding: 20px 0px 20px 0px;
+  outline: 0.2px solid rgb(234, 230, 230);
+
 }
 
 .category-item {
-  width: 120px;
+  width: 100%;
   height: 150px;
-  border: 0.2px solid rgb(234, 230, 230);
+  outline: 0.2px solid rgb(234, 230, 230);
   cursor: pointer;
 }
 
 .items-categories {
+  width: 100% !important;
   max-height: 300px;
+  display: grid; 
+  grid-template-columns: repeat(10, 1fr); 
+  padding: 0.4px;
+
+
 }
 
 .category-icon {
-  width: 84px;
+  width: 100%;
   height: 88px;
   object-fit: contain;
   margin-bottom: 10px;
@@ -25,7 +32,8 @@
   padding: 10px 0px 10px 0px;
 
   span {
-    font-size: 16px;
+    padding-left: 15px;
+    font-size: 20px;
     color: rgb(111, 108, 108);
     font-family: 'roboto';
     font-weight: 500;
@@ -34,35 +42,3 @@
   }
 }
 
-.carousel-control-next {
-  /* Màu nền tùy chỉnh */
-  border-radius: 50%;
-  /* Bo tròn nút */
-  width: 40px;
-  height: 40px;
-  top: 50%;
-  /* Căn giữa nút theo chiều dọc */
-  transform: translateY(-50%);
-}
-
-.carousel-control-next-icon {
-  filter: invert(1);
-  /* Đổi màu biểu tượng nếu cần */
-}
-
-
-.carousel-control-prev {
-  /* Màu nền tùy chỉnh */
-  border-radius: 50%;
-  /* Bo tròn nút */
-  width: 40px;
-  height: 40px;
-  top: 50%;
-  /* Căn giữa nút theo chiều dọc */
-  transform: translateY(-50%);
-}
-
-.carousel-control-prev-icon {
-  filter: invert(1);
-  /* Đổi màu biểu tượng nếu cần */
-}
