--- a/src/components/image-details/style-image-gallery.scss
+++ b/src/components/image-details/style-image-gallery.scss
@@ -7,7 +7,7 @@
   
   .image-gallery .image-gallery-image {
     /* Thẻ img*/
-    background-color: #b01414 !important;
+    // background-color: #b01414 !important;
     padding: 10px !important;
     height: auto !important;
   }
