--- a/src/components/categories/CategoriesCarousel .scss
+++ b/src/components/categories/CategoriesCarousel .scss
@@ -16,7 +16,7 @@
   max-height: 300px;
   display: grid; 
   grid-template-columns: repeat(10, 1fr); 
-  padding: 0.4px;
+  padding: 0.8px;
 
 
 }
@@ -39,6 +39,14 @@
     font-weight: 500;
     // margin-left: 47px;
 
+  }
+}
+@media(max-width:768px){
+  .items-categories{
+    grid-template-columns: repeat(5, 1fr); 
+  }
+  .category-item{
+    height: 140px;
   }
 }
 
