--- a/src/layout/user/side-bar/side-bar.scss
+++ b/src/layout/user/side-bar/side-bar.scss
@@ -11,7 +11,7 @@
 .side-bar-item {
     cursor: pointer;
     &:hover {
-        color: $primary-color
+        color: rgb(232, 225, 225);
     }
 }
 
