--- a/src/pages/user/product/product-detail.scss
+++ b/src/pages/user/product/product-detail.scss
@@ -73,5 +73,19 @@
     }
 }
 
+  .toggle-btn {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #ff5e00;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .toggle-btn:hover {
+    background-color: #ff5e00;
+  }
+  
 
 
