--- a/src/pages/user/message/message.scss
+++ b/src/pages/user/message/message.scss
@@ -20,7 +20,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('https://images2.thanhnien.vn/528068263637045248/2023/4/23/edit-truc-anh-16822518118551137084698.png');
+    background-image: url('https://media.istockphoto.com/id/1445912539/vi/anh/t%E1%BB%9D-gi%E1%BA%A5y-tr%E1%BA%AFng.jpg?s=612x612&w=0&k=20&c=muPneG29Gp-hIEsAovlr0kQP1RXzKXUlJX5haaRnYhc=');
     /* Thay 'your-image-url.jpg' bằng URL của ảnh */
     background-size: cover;
     /* Đảm bảo ảnh phủ toàn bộ khối */
