--- a/src/pages/user/cart/cart-item.scss
+++ b/src/pages/user/cart/cart-item.scss
@@ -72,6 +72,21 @@
   border: none;
 }
 
+.variant-options1 {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  width: 780%;
+  transform-origin: top right;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  background-color:white;
+  border:1px solid red;
+  /* Nhạt hơn một chút */
+  font-size: 10px;
+
+  border-radius: 10px;
+}
 .attr1-update {
   display: flex;
   flex-wrap: wrap;
@@ -94,15 +109,27 @@
 
 .fixed-header {
   position: sticky;
-  top: 80px;
+  top: 60px;
   width: calc(100%);
-  z-index: 1000;
+  z-index: 20;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.product-similar-cs{
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  font-size: 13px;
+
 }
 
 @media (max-width: 768px) {
   .variant-options {
     left: -90%;
     width: 195%;
+  }
+  .variant-options1{
+    width: 250%;
+    right: -15%;
+
   }
 }
