--- a/src/pages/user/cart/cart-item.scss
+++ b/src/pages/user/cart/cart-item.scss
@@ -109,7 +109,7 @@
 
 .fixed-header {
   position: sticky;
-  top: 60px;
+  top: 80px;
   width: calc(100%);
   z-index: 20;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -131,5 +131,8 @@
     width: 250%;
     right: -15%;
 
+  }
+  .fixed-header{
+    top: 60px;
   }
 }
